# TravelAgency

./: .gitignore  README.md  TravelAgency.py  app.py  pyproject.toml  tasks.py  test.py
agents/: CityExpertAgent.py  ExpertTravelAgent.py  LocalGuideAgent.py  agents.py
llm/: llm_manager.py  models.py
llm/models/: constants.py  llm_models.py  model.py
llm/opensource/setup/: llama2.sh  mistral.sh
lms/: openai.py
tools/web/: search_instagram_tool.py  search_internet_tools.py
